# xctsk-viewer

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cspell-dictionary.txt  cspell.json  fly.toml  mypy.ini  pyproject.toml  requirements.txt  run.py  wsgi.py
.github/: copilot-instructions.md
app/: __init__.py
app/lib/pyxctsk/: __init__.py  __main__.py  cli.py  distance.py  exceptions.py  geojson.py  optimization_config.py  parser.py  qrcode_task.py  route_optimization.py  sss_calculations.py  task.py  task_distances.py  turnpoint.py  utils.py
app/routes/: api.py  main.py  static_routes.py
app/services/: __init__.py  xctsk_service.py
app/static/css/: style.css
app/templates/: about.html  base.html  index.html  task_viewer.html  viewer.html
app/utils/: __init__.py  route_helpers.py  task_cache.py
