[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xctsk-viewer"
version = "0.1.0"
description = "A Python-based interactive visualization tool for viewing XCTSK files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Simon Steiner", email = "simonsteiner@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Flask",
]
keywords = ["xctsk", "xctask", "paragliding", "visualization", "flask"]
requires-python = ">=3.8"
dependencies = [
    "flask>=3.1.1",
    "pyxctsk>=0.2.0"
]

[project.urls]
Repository = "https://github.com/simonsteiner/xctsk-viewer"
