[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xctsk-viewer"
version = "0.1.0"
description = "A Python-based interactive visualization tool for viewing XCTSK files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Simon Steiner", email = "simonsteiner@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Flask",
]
keywords = ["xctsk", "xctask", "paragliding", "visualization", "flask"]
requires-python = ">=3.8"
dependencies = [
    "flask>=3.1.1",
    "pyxctsk @ git+https://github.com/simonsteiner/pyxctsk"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pre_commit>=4.2.0",
    "pydocstyle>=6.3.0",
]

[project.urls]
Repository = "https://github.com/simonsteiner/xctsk-viewer"
